--- a/css/project.css
+++ b/css/project.css
@@ -3,8 +3,8 @@ body{
 	margin:0px auto 0px auto;
 	padding:0px;
 	background-color: #D9D9D9; /*rook grijze kleur*/
-	min-width:850px;
-	max-width:1500px;
+	min-width:950px;
+	max-width:1700px;
 }
 
 
@@ -90,10 +90,10 @@ padding-bottom:10px;
 
 #soort
 {
-	margin-top: 10px;
-    margin-left: 10px;
-    padding: 5px;
-	
+	margin-top: 5px;
+    margin-left: 5px;
+	margin-bottom: 5px;
+
 }
 #zoeken
 {
@@ -118,8 +118,8 @@ padding-bottom:10px;
   display: block;
   position:relative;
   float: left;
-  min-width:720px;
-  max-width: 1080px;
+  min-width:850px;
+  max-width: 1200px;
   max-height: 600px;
   min-height:450px;
   
@@ -128,6 +128,23 @@ padding-bottom:10px;
 #inhoud
 {
 	display:block;
+	
+}
+
+#inhoud a
+{
+	padding:5px 5px 5px 5px;
+	line-height: 1.5;
+	font-family: Arial;
+	font-size: 20px;
+}
+
+legend
+{
+	line-height: 1.5;
+	font-family: Arial;
+	font-size: 25px;
+	padding: 10px 10px 10px 10px;
 }
 .menu
 {
@@ -181,7 +198,7 @@ a
 {
     display: inline-block;
     border-radius: 2px;
-    padding: 2px;    
+    padding: 5px;    
 }
 
 #container
@@ -205,7 +222,7 @@ a
 }
 #product img{
     float: left;
-	margin-right:25px;
+	margin: 10px 25px 10px 25px;
 	border:1px solid black;
 	max-width:350px;
 	max-height:480px;
@@ -222,24 +239,25 @@ a
 
 #Resultaten
 {
-    float: left;
-    margin-left: 7%;
-	padding-top: 0%;
-    margin-bottom: 10%;
-	--background-color: #515253;
-    min-width:500px;
+    /*float: left;*/
+    margin-left: 5%;
+	padding-top: 2%;
+    margin-bottom: 5%;
+    min-width:750px;
+	max-width:1250px;
 	border-radius: 5px 5px 5px 5px;
 }
-#Resultaten div{
+#Resultaten div
+{
     float: left;
-    margin-top: 50px;
-	margin-bottom: 50px;
-    margin-right: 25px;
-    margin-left: 25px;
-	min-width: 250px;
-	max-width:400px;
+    margin-top: 2%;
+	margin-bottom: 2%;
+    margin-right: 2%;
+    margin-left: 2%;
+	min-width: 200px;
+	max-width:350px;
 	max-height:500px;
-	min-height: 250px; 
+	min-height: 200px; 
     text-align: center;
 	border:1px solid black;
 }
@@ -444,7 +462,7 @@ footer
 
 .footer-distributed .footer-links a{
 	display:inline-block;
-	line-height: 1.8;
+	line-height: 1;
 	text-decoration: none;
 	color:  inherit;
 }
